Ref #100985 - Fix mobile nav alignment

--- a/assets/sass/rennes-hugo/design-system/_header.sass
+++ b/assets/sass/rennes-hugo/design-system/_header.sass
@@ -128,6 +128,7 @@ header#document-header
           &:last-of-type
             &::before
               height: pxToRem(20)
+              font-size: pxToRem(22)
               margin: 0 !important
               line-height: 1
 
