--- a/assets/sass/rennes-hugo/design-system/_search.sass
+++ b/assets/sass/rennes-hugo/design-system/_search.sass
@@ -49,14 +49,16 @@
 .search-button--custom-menu
   @include button-icon(search-line)
 
-  width: pxToRem(77)
   display: flex
   flex-direction: column-reverse
   justify-content: center
   gap: pxToRem(10)
-  margin-top: pxToRem(3)
   font-size: pxToRem(13)
   font-family: DMSans, sans-serif
+  @include media-breakpoint-down(desktop)
+    width: pxToRem(77)
+  @include media-breakpoint-up(desktop)
+    margin-top: pxToRem(3)
 
   &::after
     font-size: pxToRem(20)
